// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkRating should correctly handling values higher than 5 when rating scale is zero to five 1`] = `
<DocumentFragment>
  <div
    aria-label="10 Super, smashing, great"
    class="bpk-rating"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--label-1 bpk-rating__value"
    >
      5
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__scale"
      >
        /5
      </span>
    </span>
    <div
      class="bpk-rating__text-wrapper"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--label-1"
      >
        Smashing
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__subtitle"
      >
        Doubleplusgood
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should correctly handling values higher than 10 when rating scale is zero to ten 1`] = `
<DocumentFragment>
  <div
    aria-label="15 Amazing brilliant"
    class="bpk-rating custom-classname"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--label-1 bpk-rating__value"
    >
      10
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__scale"
      >
        /10
      </span>
    </span>
    <div
      class="bpk-rating__text-wrapper"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--label-1"
      >
        Amazing
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__subtitle"
      >
        Brilliant
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should correctly handling values lower than 0 1`] = `
<DocumentFragment>
  <div
    aria-label="-1.3 Low bad option"
    class="bpk-rating custom-classname"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--label-1 bpk-rating__value"
    >
      0
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__scale"
      >
        /5
      </span>
    </span>
    <div
      class="bpk-rating__text-wrapper"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--label-1"
      >
        Low
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__subtitle"
      >
        Bad option
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should correctly when value is string type 1`] = `
<DocumentFragment>
  <div
    aria-label="4,6 Wonderful Wise choice"
    class="bpk-rating"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--label-1 bpk-rating__value"
    >
      4,6
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__scale"
      >
        /5
      </span>
    </span>
    <div
      class="bpk-rating__text-wrapper"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--label-1"
      >
        Wonderful
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__subtitle"
      >
        Wise choice
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should not show scale with showScale=false correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="4.9 Awesome It is a fantanstic place"
    class="bpk-rating"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--label-1 bpk-rating__value"
    >
      4.9
    </span>
    <div
      class="bpk-rating__text-wrapper"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--label-1"
      >
        Awesome
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__subtitle"
      >
        It is a fantanstic place
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="4.6 Excellent 672 reviews"
    class="bpk-rating"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--label-1 bpk-rating__value"
    >
      4.6
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__scale"
      >
        /5
      </span>
    </span>
    <div
      class="bpk-rating__text-wrapper"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--label-1"
      >
        Excellent
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__subtitle"
      >
        672 reviews
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render large size correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="4.6 Excellent 2,420 reviews"
    class="bpk-rating bpk-rating--large"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--hero-5 bpk-rating__value"
    >
      4.6
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--body-default bpk-rating__scale"
      >
        /5
      </span>
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--large"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--heading-5 bpk-rating__title--large"
      >
        Excellent
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--body-default bpk-rating__subtitle bpk-rating__subtitle--large"
      >
        2,420 reviews
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render large title only correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="6.7 Average might recommend"
    class="bpk-rating"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--hero-5 bpk-rating__value"
    >
      5
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--body-default bpk-rating__scale"
      >
        /5
      </span>
    </span>
    <div
      class="bpk-rating__text-wrapper bpk-rating__text-wrapper--large"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--heading-5 bpk-rating__title--large"
      >
        Average
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render showScale rating correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="6.7 Average might recommend"
    class="bpk-rating"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--label-1 bpk-rating__value"
    >
      5
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__scale"
      >
        /5
      </span>
    </span>
    <div
      class="bpk-rating__text-wrapper"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--label-1"
      >
        Average
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__subtitle"
      >
        Might recommend
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render title only correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="6.7 Average might recommend"
    class="bpk-rating"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--label-1 bpk-rating__value"
    >
      5
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__scale"
      >
        /5
      </span>
    </span>
    <div
      class="bpk-rating__text-wrapper"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--label-1"
      >
        Average
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkRating should render zero to ten scale rating correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="8.2 Excellent 2,420 reviews"
    class="bpk-rating"
    role="figure"
  >
    <span
      aria-hidden="true"
      class="bpk-text bpk-text--label-1 bpk-rating__value"
    >
      8.2
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__scale"
      >
        /10
      </span>
    </span>
    <div
      class="bpk-rating__text-wrapper"
    >
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--label-1"
      >
        Excellent
      </span>
      <span
        aria-hidden="true"
        class="bpk-text bpk-text--caption bpk-rating__subtitle"
      >
        2,420 reviews
      </span>
    </div>
  </div>
</DocumentFragment>
`;
